// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code should repspond to changed by width 1`] = `
LoadedCheerio {
  "0": Node {
    "attribs": Object {
      "class": "",
      "width": "50%",
    },
    "children": Array [
      Node {
        "attribs": Object {},
        "children": Array [
          Node {
            "data": "code",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "code",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {},
        "x-attribsPrefix": Object {},
      },
    ],
    "name": "pre",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": Node {
      "attribs": Object {},
      "children": Array [
        Node {
          "data": "
        pre {
          max-width: 100%;
          font-size: calc(0.875 * 16px);
          width: 50%;
          height: auto;
          padding: calc(1 * 16px) calc(1.3 * 16px) calc(1 * 16px) calc(1.3 * 16px);
          margin: calc(1.3 * 16px) 0 calc(1.3 * 16px) 0;
        }

        .dark {
          color: white;
          background: black;
        }

        .dark code {
          color: white;
        }
      ",
          "next": null,
          "parent": [Circular],
          "prev": null,
          "type": "text",
        },
      ],
      "name": "style",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": Node {
        "children": Array [
          [Circular],
          [Circular],
        ],
        "name": "root",
        "next": null,
        "parent": null,
        "prev": null,
        "type": "root",
      },
      "prev": [Circular],
      "type": "style",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "parent": Node {
      "children": Array [
        [Circular],
        Node {
          "attribs": Object {},
          "children": Array [
            Node {
              "data": "
        pre {
          max-width: 100%;
          font-size: calc(0.875 * 16px);
          width: 50%;
          height: auto;
          padding: calc(1 * 16px) calc(1.3 * 16px) calc(1 * 16px) calc(1.3 * 16px);
          margin: calc(1.3 * 16px) 0 calc(1.3 * 16px) 0;
        }

        .dark {
          color: white;
          background: black;
        }

        .dark code {
          color: white;
        }
      ",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "style",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "style",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": null,
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "width": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "width": undefined,
    },
  },
  "1": Node {
    "attribs": Object {},
    "children": Array [
      Node {
        "data": "
        pre {
          max-width: 100%;
          font-size: calc(0.875 * 16px);
          width: 50%;
          height: auto;
          padding: calc(1 * 16px) calc(1.3 * 16px) calc(1 * 16px) calc(1.3 * 16px);
          margin: calc(1.3 * 16px) 0 calc(1.3 * 16px) 0;
        }

        .dark {
          color: white;
          background: black;
        }

        .dark code {
          color: white;
        }
      ",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "text",
      },
    ],
    "name": "style",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": Node {
      "children": Array [
        Node {
          "attribs": Object {
            "class": "",
            "width": "50%",
          },
          "children": Array [
            Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "code",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "code",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "pre",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "width": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "width": undefined,
          },
        },
        [Circular],
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": Node {
      "attribs": Object {
        "class": "",
        "width": "50%",
      },
      "children": Array [
        Node {
          "attribs": Object {},
          "children": Array [
            Node {
              "data": "code",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "code",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
      ],
      "name": "pre",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": [Circular],
      "parent": Node {
        "children": Array [
          [Circular],
          [Circular],
        ],
        "name": "root",
        "next": null,
        "parent": null,
        "prev": null,
        "type": "root",
      },
      "prev": null,
      "type": "tag",
      "x-attribsNamespace": Object {
        "class": undefined,
        "width": undefined,
      },
      "x-attribsPrefix": Object {
        "class": undefined,
        "width": undefined,
      },
    },
    "type": "style",
    "x-attribsNamespace": Object {},
    "x-attribsPrefix": Object {},
  },
  "_root": LoadedCheerio {
    "0": Node {
      "children": Array [
        Node {
          "attribs": Object {},
          "children": Array [
            Node {
              "attribs": Object {},
              "children": Array [],
              "name": "head",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": Node {
                "attribs": Object {},
                "children": Array [],
                "name": "body",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
            Node {
              "attribs": Object {},
              "children": Array [],
              "name": "body",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "attribs": Object {},
                "children": Array [],
                "name": "head",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "html",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Code should support block mode 1`] = `
LoadedCheerio {
  "0": Node {
    "attribs": Object {
      "class": "",
    },
    "children": Array [
      Node {
        "attribs": Object {},
        "children": Array [
          Node {
            "data": "code",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "code",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {},
        "x-attribsPrefix": Object {},
      },
    ],
    "name": "pre",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": Node {
      "attribs": Object {},
      "children": Array [
        Node {
          "data": "
        pre {
          max-width: 100%;
          font-size: calc(0.875 * 16px);
          width: initial;
          height: auto;
          padding: calc(1 * 16px) calc(1.3 * 16px) calc(1 * 16px) calc(1.3 * 16px);
          margin: calc(1.3 * 16px) 0 calc(1.3 * 16px) 0;
        }

        .dark {
          color: white;
          background: black;
        }

        .dark code {
          color: white;
        }
      ",
          "next": null,
          "parent": [Circular],
          "prev": null,
          "type": "text",
        },
      ],
      "name": "style",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": Node {
        "children": Array [
          [Circular],
          [Circular],
        ],
        "name": "root",
        "next": null,
        "parent": null,
        "prev": null,
        "type": "root",
      },
      "prev": [Circular],
      "type": "style",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "parent": Node {
      "children": Array [
        [Circular],
        Node {
          "attribs": Object {},
          "children": Array [
            Node {
              "data": "
        pre {
          max-width: 100%;
          font-size: calc(0.875 * 16px);
          width: initial;
          height: auto;
          padding: calc(1 * 16px) calc(1.3 * 16px) calc(1 * 16px) calc(1.3 * 16px);
          margin: calc(1.3 * 16px) 0 calc(1.3 * 16px) 0;
        }

        .dark {
          color: white;
          background: black;
        }

        .dark code {
          color: white;
        }
      ",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "style",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "style",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": null,
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "1": Node {
    "attribs": Object {},
    "children": Array [
      Node {
        "data": "
        pre {
          max-width: 100%;
          font-size: calc(0.875 * 16px);
          width: initial;
          height: auto;
          padding: calc(1 * 16px) calc(1.3 * 16px) calc(1 * 16px) calc(1.3 * 16px);
          margin: calc(1.3 * 16px) 0 calc(1.3 * 16px) 0;
        }

        .dark {
          color: white;
          background: black;
        }

        .dark code {
          color: white;
        }
      ",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "text",
      },
    ],
    "name": "style",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": Node {
      "children": Array [
        Node {
          "attribs": Object {
            "class": "",
          },
          "children": Array [
            Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "code",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "code",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "pre",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        [Circular],
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": Node {
      "attribs": Object {
        "class": "",
      },
      "children": Array [
        Node {
          "attribs": Object {},
          "children": Array [
            Node {
              "data": "code",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "code",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
      ],
      "name": "pre",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": [Circular],
      "parent": Node {
        "children": Array [
          [Circular],
          [Circular],
        ],
        "name": "root",
        "next": null,
        "parent": null,
        "prev": null,
        "type": "root",
      },
      "prev": null,
      "type": "tag",
      "x-attribsNamespace": Object {
        "class": undefined,
      },
      "x-attribsPrefix": Object {
        "class": undefined,
      },
    },
    "type": "style",
    "x-attribsNamespace": Object {},
    "x-attribsPrefix": Object {},
  },
  "_root": LoadedCheerio {
    "0": Node {
      "children": Array [
        Node {
          "attribs": Object {},
          "children": Array [
            Node {
              "attribs": Object {},
              "children": Array [],
              "name": "head",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": Node {
                "attribs": Object {},
                "children": Array [],
                "name": "body",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
            Node {
              "attribs": Object {},
              "children": Array [],
              "name": "body",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "attribs": Object {},
                "children": Array [],
                "name": "head",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "html",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
